--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@ const pages = [
     personImg:"front_photo.png" 
   },
   { message:"You’re the sweetest person I’ve ever met, and you have such a cute smile—please always keep smiling like that. Stay happy always, may all your dreams come true, because you deserve nothing less." },
-  { message:"I just want to say that you’re the greatest company I could ever have. You bring so much positive energy wherever you go, and you’re always special to everyone around you. I’m truly grateful for that. Thank you for teaching me chess — before you, I didn’t even know how to play! Thank you for always being so kind and helpful." },
+  { message:"I just want to say that you’re the greatest company I could ever have. You bring so much positive energy wherever you go, and you’re always special to everyone. Trust me, you have such a sweet voice as well. Thank you for teaching me chess — honestly, I didn’t know how to play before, but now I can at least play a little 😂." },
+  { message:"You have so many talents: you’re artistic, skilled in gardening, great at games, hardworking, love reading, and I’m sure you have many more hidden skills. You’re truly amazing" },
   { message:"Many, many happiest birthdays! 🎉 \n May your day be filled with love, laughter, and all the joy you deserve. Keep smiling and shining always" }
 ];
 
