--- a/index.html
+++ b/index.html
@@ -288,22 +288,25 @@ const pages = [
 //   "message": "You have so many talents — you’re artistic, love doing art and craft, can play a bit of piano and the mouth organ, skilled in gardening, great at games, hardworking, and love reading. You even take really nice photos — especially of the moon and the solar system! I just realized how talented you truly are. Seriously, you’re amazing — keep it up and never stop being the wonderful person you are. 🌙✨"
 // },
 {
-  "message": "Hey,\nOn February 16-17, 2024, I saw you for the first time outside the canteen. You were wearing a black t-shirt and blue jeans, walking while smiling, and a little wind was blowing—you looked really good. Later, I got to know your name when KYT happened. A few months after that, I moved to Marsh, and then you moved to the USA. You came back in September, and initially, I thought you were very strict. I was honestly a bit afraid to talk to you."
+  "message": "Hey\n It was February 16th or 17th, 2024, when I saw you for the first time outside the canteen. You were wearing a black t-shirt and blue jeans, walking while smiling and talking, and a little wind was blowing—you looked really amazing. Later, I got to know your name when KYT happened. A few months after that, I moved to Marsh, and then you moved to the USA."
 },
 {
-  "message": "But when we actually started talking, I realized you were completely different. I found that you were the most amazing company I could ever have, and I genuinely enjoyed talking to you more than anyone else. I don’t know why—maybe it’s because of the amazing energy you carry. That kind of energy is truly rare, and I think you’re so special to everyone."
+  "message": "You came back in September, and at first, I thought you were very strict. Honestly, I was a bit afraid to talk to you. But when we actually started talking, I realized you were completely different. I found that you were the most amazing company I could ever have, and I genuinely enjoyed talking to you more than anyone else—maybe it’s because of the amazing energy you carry."
 },
 {
-  "message": "Thank you for always suggesting such good movies and series—you seriously have great taste! You’re also a really interesting person with so many skills. You’re artistic, love doing art and crafts, can play a bit of piano and the mouth organ, are skilled in gardening, great at games (like chess—I’ve learned from you, though I’m still not as good), and love reading. You even take really nice photos—especially of the moon and the solar system."
+  "message": "That energy is rare, and whenever we talk, my day always gets better—maybe you’re a little lucky for me. I think you’re so special to everyone. Thank you for always suggesting such good movies and series—you seriously have great taste! You’re also a really interesting person with so many skills. You’re artistic, love doing arts and crafts, can play a bit of piano and the mouth organ, are skilled in gardening, great at games (like chess—I’ve learned from you, though I’m still not as good), and love reading."
 },
 {
-  "message": "I just realized how truly talented you are. Seriously, you’re amazing. Keep it up, and never stop being the wonderful person you are."
+  "message": "You even take really nice photos—especially of the moon and that Saturn one. I’m sure there are a lot more skills I don’t even know about. I just realized how truly talented you are. Seriously, you’re amazing—keep it up, and never stop being the wonderful person you are."
 },
 {
   "message": "I thought this quote suits you perfectly —\n“She carries a quiet kind of magic — the kind that doesn’t seek attention, but leaves everything she touches a little more beautiful, a little more alive.”\n- Butterflies Rising"
 },
 
-  { message:"Many, many happiest birthdays! 🎉 \n May your day be filled with love, laughter, and all the joy you deserve. Keep smiling and shining always" }
+{
+  "message": "I just want to say one last thing from my side -\n I know you don’t usually open up, even when you need help, and that you try to handle everything on your own. But please remember, if you ever need anything or just want to talk, you can message or call me anytime. I’ll always make time for you. It’s not something I’m just saying out of formality — I really mean it . No matter what, I’ll always be here for you.\n Many, many happiest birthdays again! 🎉"
+}
+
 ];
 
 let index=0;
