--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday Mam</title>
+<title>Vintage Birthday Flipbook</title>
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Cinzel:wght@400;600;700&family=IM+Fell+English:ital@0;1&display=swap" rel="stylesheet">
 <style>
 @font-face {
@@ -329,7 +329,12 @@ const pages = [
 //   "message": "You have so many talents — you’re artistic, love doing art and craft, can play a bit of piano and the mouth organ, skilled in gardening, great at games, hardworking, and love reading. You even take really nice photos — especially of the moon and the solar system! I just realized how talented you truly are. Seriously, you’re amazing — keep it up and never stop being the wonderful person you are. 🌙✨"
 // },
 {
-  "message": "Hey\n It was February 16th or 17th, 2024, when I saw you for the first time outside the canteen. You were wearing a black t-shirt and blue jeans, walking while smiling and talking, and a little wind was blowing—you looked really amazing. Later, I got to know your name when KYT happened. A few months after that, I moved to Marsh, and then you moved to the USA."
+  "message": "For the Sweet & Wonderful Person\n-------------------------------\n\nThis is about a truly sweet and wonderful person, someone amazing, even if she doesn’t always realize how special she is."
+}
+
+,
+{
+  "message": " It was February 16th / 17th, 2024, when I saw you for the first time outside the canteen. You were wearing a black t-shirt and blue jeans, walking while smiling and talking, and a little wind was blowing—you looked really amazing. Later, I got to know your name when KYT happened. A few months after that, I moved to Marsh, and then you moved to the USA."
 },
 {
   "message": "You came back in September, and at first, I thought you were very strict. Honestly, I was a bit afraid to talk to you. But when we actually started talking, I realized you were completely different. I found that you were the most amazing company I could ever have, and I genuinely enjoyed talking to you more than anyone else—maybe it’s because of the amazing energy you carry."
@@ -348,7 +353,8 @@ const pages = [
   "message": "I just want to say one last thing from my side -\n I know you don’t usually open up, even when you need help, and that you try to handle everything on your own. But please remember, if you ever need anything or just want to talk, you can message or call me anytime. I’ll always make time for you. It’s not something I’m just saying out of formality — I really mean it . No matter what, I’ll always be here for you."
 },
 {
-  "message": "Many, many happiest birthdays again! 🥳 \nAlways keep that cute smile just like you always do, and stay happy — the only thing that truly matters ✨"}
+  "message": "Many, many happiest birthdays again! 🥳 \nAlways keep that cute smile just like you always do, and stay happy — the only thing that truly matters ✨"
+}
 ];
 
 let index=0;
