--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ const pages = [
 
 ,
 {
-  "message": "It was on February 15th-16th, 2024, when I saw you for the first time outside the canteen. You were wearing a black top and blue jeans, walking with your friends, smiling, and talking as a little breeze passed by — you looked truly amazing. Later, I learned your name during KYT. A few months after that, I moved to Marsh, and then you moved to the USA."
+  "message": "It was on February 15/16, 2024, when I saw you for the first time outside the canteen. You were wearing a black top and blue jeans, walking with your friends, smiling, and talking — you looked truly amazing. Later, I learned your name during KYT. A few months later, I moved to Marsh, and then you moved to the USA."
 },
 {
   "message": "You came back in September, and at first, I thought you were very strict. Honestly, I was a bit afraid to talk to you. But when we actually started talking, I realized you were completely different. I found that you were the most amazing company I could ever have, and I genuinely enjoyed talking to you more than anyone else—maybe it’s because of the amazing energy you carry."
