--- a/index.html
+++ b/index.html
@@ -329,21 +329,21 @@ const pages = [
 //   "message": "You have so many talents — you’re artistic, love doing art and craft, can play a bit of piano and the mouth organ, skilled in gardening, great at games, hardworking, and love reading. You even take really nice photos — especially of the moon and the solar system! I just realized how talented you truly are. Seriously, you’re amazing — keep it up and never stop being the wonderful person you are. 🌙✨"
 // },
 {
-  "message": "For the Sweet & Wonderful Person\n----------------\n\nThis is about a sweet and wonderful soul — someone truly special, though she doesn’t always see just how rare and special she really is."
+  "message": "For the Sweet & Wonderful Person\n----------------\n\nThis is about a sweet and wonderful girl — someone truly special, even if she doesn’t always realize just how rare and amazing she really is."
 }
 
 ,
 {
-  "message": "It was on February 15/16, 2024, when I saw you for the first time outside the canteen. You were wearing a black top and blue jeans, walking with your friends, smiling, and talking — you looked truly amazing. Later, I learned your name during KYT. A few months later, I moved to Marsh, and then you moved to the USA."
+  "message": "It was on February 15/16, 2024, when I saw you for the first time outside the canteen. You were wearing a black top and blue jeans, walking with your friends, smiling, and talking — you looked truly amazing. Later, I learned your name during KYT. A few months later, I moved to Marsh, and then you moved to the USA.You came back in September, and at first, I thought you were very strict."
 },
 {
-  "message": "You came back in September, and at first, I thought you were very strict. Honestly, I was a bit afraid to talk to you. But when we actually started talking, I realized you were completely different. I found that you were the most amazing company I could ever have, and I genuinely enjoyed talking to you more than anyone else—maybe it’s because of the amazing energy you carry."
+  "message": "Honestly, I was a bit afraid to talk to you at first. But once we actually started talking, I realized you were completely different. I found that you’re one of the most amazing people I could ever talk to, and I genuinely enjoy talking to you more than anyone else. (I really wish I could talk to you more.) Maybe it’s because of the wonderful energy you carry."
 },
 {
   "message": "That energy is rare, and whenever we talk, my day always gets better—maybe you’re a little lucky for me. I think you’re so special to everyone. Thank you for always suggesting such good movies and series—you seriously have great taste! You’re also a really interesting person with so many skills. You’re artistic, love doing arts and crafts, can play a bit of piano and the mouth organ, are skilled in gardening, great at games (like Chess — I’ve learned from you, but obviously, I’m not as good as you.), and love reading."
 },
 {
-  "message": "You even take really nice photos—especially of the moon and that Saturn one. I’m sure there are a lot more skills I don’t even know about. I just realized how truly talented you are. Seriously, you’re amazing—keep it up, and never stop being the wonderful person you are."
+  "message": "You take such lovely photos — especially of the moon and that Saturn one. I’m sure there are so many talents you have that I don’t even know about yet. You truly deserve more appreciation — for your skills and for simply being you. To be very honest, you’re amazing — even I can’t find the right words to describe you. Just never stop being the wonderful and kind person you are."
 },
 {
   "message": "I thought this quote suits you perfectly —\n“She carries a quiet kind of magic — the kind that doesn’t seek attention, but leaves everything she touches a little more beautiful, a little more alive.”\n- Butterflies Rising"
