--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ const pages = [
   "message": "That energy is rare, and whenever we talk, my day always gets better—maybe you’re a little lucky for me. I think you’re so special to everyone. Thank you for always suggesting such good movies and series—you seriously have great taste! You’re also a really interesting person with so many skills. You’re artistic, love doing arts and crafts, can play a bit of piano and the mouth organ, are skilled in gardening, great at games (like Chess — I’ve learned from you, but obviously, I’m not as good as you.), and love reading."
 },
 {
-  "message": "You take such lovely photos — especially of the moon and that Saturn one. I’m sure there are so many talents you have that I don’t even know about yet. You truly deserve more appreciation — for your skills and for simply being you. To be very honest, you’re amazing — even I can’t find the right words to describe you. Just never stop being the wonderful and kind person you are."
+  "message": "You take such lovely photos — especially of the moon and that Saturn one! I’m sure there are so many talents you have that I don’t even know about yet. You truly deserve lots of appreciation — for your skills, and just for being you (and I’m sure everyone appreciates you even more than I imagined). To be honest, you’re an amazing person — such an innocent girl… well, maybe not entirely innocent, but with those little black eyes, anyone would believe it anyway. Just kidding — but genuinely!"
 },
 {
   "message": "I thought this quote suits you perfectly —\n“She carries a quiet kind of magic — the kind that doesn’t seek attention, but leaves everything she touches a little more beautiful, a little more alive.”\n- Butterflies Rising"
