--- a/index.html
+++ b/index.html
@@ -343,14 +343,14 @@ const pages = [
   "message": "That energy is rare, Anjali. Whenever we talk, my day always gets better—maybe you’re a little lucky for me. I think you’re so special to everyone. Thank you for always suggesting such good movies and series—you seriously have great taste! You’re also a really interesting person with so many skills. You’re artistic, love doing arts and crafts, can play a bit of piano and the mouth organ, are skilled in gardening, great at games (like Chess — I’ve learned from you, but obviously, I’m not as good as you.), and love reading."
 },
 {
-  "message": "You take such lovely photos — especially of the moon and that Saturn one! I’m sure there are so many talents you have that I don’t even know about yet. You truly deserve lots of appreciation — for your skills and just for being you. I’m sure everyone appreciates you even more than I can imagine. To be honest, you’re an amazing person — such an innocent girl… well, maybe not entirely innocent, but with those little black innocent eyes, anyone would believe it anyway. Just kidding — but genuinely!"
+  "message": "You take such lovely photos — especially of the moon and that Saturn one! I’m sure there are so many talents you have that I don’t even know about yet. You truly deserve lots of appreciation — for your skills and just for being you. I’m sure everyone appreciates you even more than I can imagine. To be honest, you’re an amazing person — Such an innocent girl… well, maybe not entirely innocent, but with those little black, innocent eyes, she can convince anyone. Just kidding — but honestly, they really do!"
 },
 {
   "message": "I thought this quote suits you perfectly —\n“She carries a quiet kind of magic — the kind that doesn’t seek attention, but leaves everything she touches a little more beautiful, a little more alive.”\n- Butterflies Rising"
 },
 
 {
-  "message": "I just want to say one last thing from my side -\n I know you don’t usually open up, even when you need help, and that you try to handle everything on your own. But please remember, if you ever need anything or just want to talk, you can message or call me anytime. I’ll always make time for you. It’s not something I’m just saying out of formality — I really mean it . No matter what, I’ll always be here for you."
+  "message": "I just want to say one last thing from my side -\n I know you don’t usually open up so easily, even when you need help, and that you try to handle everything on your own. But please remember, if you ever need anything or just want to talk, you can message or call me anytime. I’ll always make time for you. It’s not something I’m just saying out of formality — I really mean it . No matter what, I’ll always be here for you."
 },
 {
   "message": "Many, many happiest birthdays again! 🥳 \nAlways keep that cute smile just like you always do, and stay happy — the only thing that truly matters ✨"
