--- a/index.html
+++ b/index.html
@@ -330,9 +330,7 @@ const pages = [
 // },
 {
   "message": "For the Sweet & Wonderful Person\n----------------\n\nThis is about a sweet and wonderful girl — someone truly special, even if she doesn’t always realize just how rare and amazing she really is."
-}
-
-,
+},
 {
   "message": "It was on February 15/16, 2024, when I saw you for the first time outside the canteen. You were wearing a black top and blue jeans, walking with your friends, smiling, and talking — you looked truly amazing. Later, I learned your name during KYT. A few months later, I moved to Marsh, and then you moved to the USA.You came back in September, and at first, I thought you were very strict."
 },
@@ -343,8 +341,9 @@ const pages = [
   "message": "That energy is rare, Anjali. Whenever we talk, my day always gets better—maybe you’re a little lucky for me. I think you’re so special to everyone. Thank you for always suggesting such good movies and series—you seriously have great taste! You’re also a really interesting person with so many skills. You’re artistic, love doing arts and crafts, can play a bit of piano and the mouth organ, are skilled in gardening, great at games (like Chess — I’ve learned from you, but obviously, I’m not as good as you.), and love reading."
 },
 {
-  "message": "You take such lovely photos — especially of the moon and that Saturn one! I’m sure there are so many talents you have that I don’t even know about yet. You truly deserve lots of appreciation — for your skills and just for being you. I’m sure everyone appreciates you even more than I can imagine. To be honest, you’re an amazing person — Such an innocent girl… well, maybe not entirely innocent, but with those little black, innocent eyes, she can convince anyone. Just kidding — but honestly, they really do!"
+  "message": "You take such lovely photos — especially of the moon and that Saturn one! I’m sure there are so many talents you have that I don’t even know about yet. You truly deserve lots of appreciation — for your skills and just for being you. I’m sure everyone appreciates you even more than I can imagine. To be honest, you’re an amazing person — Such an innocent girl… well, maybe not entirely innocent, but with those little black, innocent eyes, anyone would believe it. Just kidding — but honestly, they really do!"
 },
+{"message":"Sometimes, I catch that quiet sadness behind your smile, even when you’re trying to look okay. I don’t know why others don’t see it, but somehow, I do. There are moments I want to ask if you’re alright, but the words don’t come out — and when I finally do, you say you’re fine, even though I can feel you’re not. Maybe you think I wouldn’t understand… maybe you’re right, or maybe not. But still, if you ever feel like talking — about anything at all — I’m here. Trust me, I’m a good listener, and I always will be."},
 {
   "message": "I thought this quote suits you perfectly —\n“She carries a quiet kind of magic — the kind that doesn’t seek attention, but leaves everything she touches a little more beautiful, a little more alive.”\n- Butterflies Rising"
 },
