--- a/index.html
+++ b/index.html
@@ -332,16 +332,16 @@ const pages = [
   "message": "For the Sweet & Wonderful Person\n----------------\n\nThis is about a sweet and wonderful girl — someone truly special, even if she doesn’t always realize just how rare and amazing she really is."
 },
 {
-  "message": "It was on February 15/16, 2024, when I saw you for the first time outside the canteen. You were wearing a black top and blue jeans, walking with your friends, smiling, and talking — you looked truly amazing. Later, I learned your name during KYT. A few months later, I moved to Marsh, and then you moved to the USA.You came back in September, and at first, I thought you were very strict."
+  "message": "It was on February 15/16, 2024, when I saw you for the first time outside the canteen. You were wearing a black top and blue jeans, walking with your friends, smiling, and talking — you looked truly amazing. Later, I learned your name during KYT. A few months later, I moved to Marsh, and then you moved to the USA.You came back in September, and at first, I thought you were very strict. Honestly, I was a bit afraid to talk to you at first, but once we actually started talking, I realized you were completely different.I found that you’re the most"
 },
 {
-  "message": "Honestly, I was a bit afraid to talk to you at first, but once we actually started talking, I realized you were completely different. I found that you’re the most amazing company anyone could ask for, and I genuinely enjoy talking to you more than anyone else (I don’t even know why — I just do). I really wish I could talk to you more. There’s something wonderfully different about your energy — warm, genuine, and so easy to trust; I can’t quite explain it, but it just feels different."
+  "message": "most amazing company anyone could ask for, and I genuinely enjoy talking to you more than anyone else (I don’t even know why — I just do).You’re the most genuine and real person I’ve ever met — no show-off & all — just this soft, innocent charm, like a little child whose smile lifts the weight off everything around and whose presence brings a quiet, comforting peace. I really wish I could talk to you more. There’s something wonderfully different about your energy — warm, genuine, and so easy to trust; I can’t quite explain it, but it just feels different."
 },
 {
   "message": "That energy is rare, Anjali. Whenever we talk, my day always gets better—maybe you’re a little lucky for me. I think you’re so special to everyone. Thank you for always suggesting such good movies and series—you seriously have great taste! You’re also a really interesting person with so many skills. You’re artistic, love doing arts and crafts, can play a bit of piano and the mouth organ, are skilled in gardening, great at games (like Chess — I’ve learned from you, but obviously, I’m not as good as you.), and love reading."
 },
 {
-  "message": "You take such lovely photos — especially of the moon and that one of Saturn! I’m sure there are so many talents you have that I haven’t even discovered yet.. You truly deserve lots of appreciation — not just for your skills, but for the person you are. I’m sure everyone admires you even more than I can imagine. Honestly, you’re such an amazing person — so innocent… well, maybe not entirely innocent, but with those little dark, innocent eyes, anyone would believe it. Just kidding — but honestly, they really do!"
+  "message": "You take such lovely photos — especially of the moon and that one of Saturn! I’m sure there are so many talents you have that I haven’t even discovered yet.. You truly deserve lots of appreciation — not just for your skills, but for the person you are. I’m sure everyone admires you even more than I can imagine. Honestly, you’re such an amazing person — so innocent… well, maybe not entirely innocent, but with those little black innocent eyes, anyone would believe it. Just kidding — but honestly, they really do!"
 },
 {"message":"Sometimes, I catch that quiet sadness behind your smile, even when you’re trying to look okay. I don’t know why others don’t see it, but somehow, I do. There are moments I want to ask if you’re alright, but the words don’t come out — and when I finally do, you say you’re fine, even though I can feel you’re not. Maybe you think I wouldn’t understand… maybe you’re right, or maybe not. But still, if you ever feel like talking — about anything at all — I’m here. Trust me, I’m a good listener, and I always will be."},
 {
@@ -352,7 +352,7 @@ const pages = [
   "message": "I just want to say one last thing from my side -\n I know you don’t usually open up so easily, even when you need help, and that you try to handle everything on your own. But please remember, if you ever need anything or just want to talk, you can message or call me anytime. I’ll always make time for you. It’s not something I’m just saying out of formality — I really mean it . No matter what, I’ll always be here for you."
 },
 {
-  "message": "Many, many happiest birthdays again! 🥳 \nAlways keep that cute smile just like you always do, and stay happy — the only thing that truly matters ✨"
+  "message": "Many, many Happiest Birthdays Again! 🥳 \nAlways keep that cute smile just like you always do, and stay happy — the only thing that truly matters ✨"
 }
 ];
 
